[package]
name = "util-ringbuf"
version = "0.1.0"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# name = ""
path="src/lib.rs"

[dependencies]
cpp-utils = {path = "../cpp-utils"}

[build-dependencies]
c-build = {path = "../c-build"}